git-svn-id: http://svn.vdombox.ru/flextools/trunk@1686 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -40,7 +40,8 @@
 		<controls:ActionButton styleName="previewButton" 
 			label="{resourceManager.getString('Application','editor_preview')}"
 			labelPlacement="bottom"
-			switched="false"/>
+			switched="false"
+			click="showPreview();"/>
 		
 		<controls:ActionButton styleName="treeButton"
 			labelPlacement="bottom"
@@ -58,9 +59,9 @@
 			labelPlacement="bottom"
 			click="{placeCanvas.selectedChild=analyseCanv}"/>
 		
-		<!--<controls:ActionButton styleName="statisticsButton" 
+		<controls:ActionButton styleName="statisticsButton" 
 			label="{resourceManager.getString('Application','editor_statistics')}"
-			labelPlacement="bottom"/>-->
+			labelPlacement="bottom"/>
 		
 			
 	</controls:ControlPanel>
