--- a/IDE/Vdom/vdom/components/edit/containers/toolbarClasses/RichTextTools.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/toolbarClasses/RichTextTools.mxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:controls="com.yahoo.astra.mx.controls.*"
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml"
 	width="100%"
-	focusEnabled="false" backgroundColor="#F0F0F0">
+	focusEnabled="false" backgroundColor="#F0F0F0" xmlns:local="*" xmlns:controls="com.yahoo.astra.mx.controls.*">
 	<mx:Style>
 		.toolbarButton {
 			cornerRadius:0;
 			alpha:0;
 			borderColor:#F0F0F0;
+			skin:ClassReference("vdom.skins.ToolbarButtonSkin");
 			fillAlphas: 0,0,0,0;
 		}
 		.toolbarComboBox {
@@ -72,7 +73,7 @@
 			<mx:Label text="Style"/>
 			<mx:ComboBox id="styleSelector" styleName="toolbarComboBox"
 				height="24" width="100"
-				change="{sample.window.tinyMCE.execCommand('FormatBlock', false, styleSelector.selectedItem.data)}" >
+				change="{tinyMCE.execCommand('FormatBlock', false, styleSelector.selectedItem.data)}" >
 				<mx:dataProvider>
 				  <mx:ArrayCollection>
 			        <mx:Object label="Paragraph" data="p"/>
@@ -96,22 +97,44 @@
 			<mx:VRule height="24"/>
 			<mx:Label text="Font"/>
 			<mx:ComboBox id="fontSelector" styleName="toolbarComboBox"
-				height="24" width="100" dataProvider="{font}" focusEnabled="false" 
-				change="changeFont(event)"/>
+				height="24" width="100" focusEnabled="false" 
+				change="changeFont(event)">
+				<mx:dataProvider>
+				  <mx:ArrayCollection>
+			        <mx:Object label="Andale Mono" data="andale mono,times"/>
+			        <mx:Object label="Arial" data="arial,helvetica,sans-serif"/>
+			        <mx:Object label="Arial Black" data="arial black,avant garde"/>
+			        <mx:Object label="Book Antiqua" data="book antiqua,palatino"/>
+			        <mx:Object label="Comic Sans MS" data="comic sans ms,sans-serif"/>
+			        <mx:Object label="Courier New" data="courier new,courier"/>
+			        <mx:Object label="Georgia" data="georgia,palatino"/>
+			        <mx:Object label="Helvetica" data="helvetica"/>
+			        <mx:Object label="Impact" data="impact,chicago"/>
+			        <mx:Object label="Symbol" data="symbol"/>
+			        <mx:Object label="Tahoma" data="tahoma,arial,helvetica,sans-serif"/>
+			        <mx:Object label="Terminal" data="terminal,monaco"/>
+			        <mx:Object label="Times New Roman" data="times new roman,times"/>
+			        <mx:Object label="Trebuchet MS" data="trebuchet ms,geneva"/>
+			        <mx:Object label="Verdana" data="verdana,geneva"/>
+			        <mx:Object label="Webdings" data="webdings"/>
+			        <mx:Object label="Wingdings" data="wingdings,zapf dingbats"/>
+			      </mx:ArrayCollection>
+				</mx:dataProvider>			
+			</mx:ComboBox>
 			<mx:VRule height="24"/>
 			<mx:Label text="Size"/>
 			<mx:ComboBox id="sizeSelector" styleName="toolbarComboBox"
 				height="24" width="100"
-				change="{sample.window.tinyMCE.execCommand('FontSize', false, sizeSelector.selectedItem.data)}">
+				change="{tinyMCE.execCommand('FontSize', false, sizeSelector.selectedItem.data)}">
 				<mx:dataProvider>
 				  <mx:ArrayCollection>
 			        <mx:Object label="1 (8 pt)" data="1"/>
-			        <mx:Object label="1 (10 pt)" data="2"/>
-			        <mx:Object label="1 (12 pt)" data="3"/>
-			        <mx:Object label="1 (14 pt)" data="4"/>
-			        <mx:Object label="1 (18 pt)" data="5"/>
-			        <mx:Object label="1 (24 pt)" data="6"/>
-			        <mx:Object label="1 (36 pt)" data="7"/>
+			        <mx:Object label="2 (10 pt)" data="2"/>
+			        <mx:Object label="3 (12 pt)" data="3"/>
+			        <mx:Object label="4 (14 pt)" data="4"/>
+			        <mx:Object label="5 (18 pt)" data="5"/>
+			        <mx:Object label="6 (24 pt)" data="6"/>
+			        <mx:Object label="7 (36 pt)" data="7"/>
 			      </mx:ArrayCollection>
 				</mx:dataProvider>
 			</mx:ComboBox>
@@ -120,7 +143,8 @@
 				viewerRenderer="vdom.components.edit.containers.toolbarClasses.richTextToolsClasses.ColorTextButton" viewerStyleName="" focusEnabled="false"
 				change="colorFillChanged(event)"/>
 			<controls:DropDownColorPicker width="36" height="24" 
-				viewerRenderer="vdom.components.edit.containers.toolbarClasses.richTextToolsClasses.ColorFillButton" viewerStyleName="" focusEnabled="false"
+				viewerRenderer="vdom.components.edit.containers.toolbarClasses.richTextToolsClasses.ColorFillButton"
+				viewerStyleName="" focusEnabled="false"
 				change="colorTextChanged(event)"/>
 			<mx:VRule height="24"/>
 			<mx:Button styleName="toolbarButton" label="Source" height="24"
