Resource Browser fix
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1695 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -9,7 +9,8 @@
 	title="Resource Manager"
 	creationComplete="{creationComplete();}"
 	showCloseButton="true"
-	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
+	verticalScrollPolicy="off" horizontalScrollPolicy="off"
+	borderAlpha="1" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
 >
 	<mx:Script>
