--- a/IDE/Vdom/vdom/controls/richTextToolBarClasses/CharMap.mxml
+++ b/IDE/Vdom/vdom/controls/richTextToolBarClasses/CharMap.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:TitleWindow 
+<mx:TitleWindow  
+	width="600" height="300"
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	layout="absolute"
 	creationComplete="zzz();"
