Remove Blur effect Cache Manager
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1757 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/_src/theme/css/default.css
+++ b/IDE/Vdom/_src/theme/css/default.css
@@ -15,6 +15,20 @@ WindowedApplication {
 	borderStyle: none;	
 }
 
+Alert {
+	
+	modalTransparencyDuration:0;
+	modalTransparencyBlur:0;
+	modalTransparency:0;
+}
+
+TitleWindow {
+	
+	modalTransparencyDuration:0;
+	modalTransparencyBlur:0;
+	modalTransparency:0;
+}
+
 VdomTitleBar {
 	
 	backgroundSize: "100%";
