git-svn-id: http://svn.vdombox.ru/flextools/trunk@1771 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -178,7 +178,7 @@
 			if(!xml) return;
 			
 			var ID:String = xml.@ID;
-			trace('currentObject: \n'+xmlTreeData..*.Object.(@ID == ID)[0]);
+			//trace('currentObject: \n'+xmlTreeData..*.Object.(@ID == ID)[0]);
 			tree.selectedItem = xmlTreeData..*.Object.(@ID == ID)[0];
 		}
 		
