--- a/IDE/Vdom/vdom/controls/RichTextToolBar.mxml
+++ b/IDE/Vdom/vdom/controls/RichTextToolBar.mxml
@@ -4,7 +4,7 @@
 	xmlns:controls="com.yahoo.astra.mx.controls.*"
 	implements="vdom.controls.IToolBar"
 	width="100%"
-	focusEnabled="false" backgroundColor="#F0F0F0" xmlns:local="*" >
+	focusEnabled="false" backgroundColor="#F0F0F0" xmlns:local="*" xmlns:richTextToolBarClasses="vdom.controls.richTextToolBarClasses.*">
 	<mx:Style>
 		.toolbarButton {
 			cornerRadius:0;
@@ -24,51 +24,53 @@
 	
 	<mx:VBox left="5" top="5" right="5" bottom="5">
 		<mx:HBox horizontalGap="0">
-			<!--<mx:Button styleName="toolbarButton" label="Save" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_save.png')"
+			<!--<richTextToolBarClasses:MBtn styleName="toolbarButton" label="Save" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_save.png')"
 				height="24"  focusEnabled="false"/>-->
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_select_all.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_select_all.png')"
 				click="execCommand('selectall');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rem_formatting.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rem_formatting.png')"
 				click="execCommand('removeformat');"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_ins_link.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_ins_link.png')"
 				click="insertLink()"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rem_link.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rem_link.png')"
 				click="execCommand('unlink');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rule.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_rule.png')"
 				click="execCommand('inserthorizontalrule');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_ins_char.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_ins_char.png')"
 				focusEnabled="false"
 				click="insertChar();"/>
 		</mx:HBox>
 		<mx:HBox>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bold.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bold.png')"
 				click="execCommand('Bold');" fontWeight="bold"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_italic.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_italic.png')"
 				click="execCommand('Italic');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
-				click="execCommand('Underline');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_strikethrough.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
+				click="execCommand('Underline');" focusEnabled="false"/>
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_underline.png')"
+				click="execCommand('Underline');" focusEnabled="false"/>
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_strikethrough.png')"
 				click="execCommand('Strikethrough');"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_left.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_left.png')"
 				click="execCommand('JustifyLeft');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_center.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_center.png')"
 				click="execCommand('JustifyCenter');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_right.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_right.png')"
 				click="execCommand('JustifyRight');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_block.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_block.png')"
 				click="execCommand('JustifyFull');"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_numlist.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_numlist.png')"
 				click="execCommand('InsertOrderedList');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bullist.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_bullist.png')"
 				click="execCommand('InsertUnorderedList');"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_outdent.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_outdent.png')"
 				click="execCommand('Outdent');"/>
-			<mx:Button styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_indent.png')"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" width="24" height="24" icon="@Embed(source='/assets/toolbars/richTextToolbar/icon_indent.png')"
 				click="execCommand('Indent');" />
 		</mx:HBox>
 		<mx:HBox>
@@ -149,7 +151,7 @@
 				viewerStyleName="" focusEnabled="false"
 				change="colorTextChanged(event)"/>
 			<mx:VRule height="24"/>
-			<mx:Button styleName="toolbarButton" label="Source" height="24"
+			<richTextToolBarClasses:MBtn styleName="toolbarButton" label="Source" height="24"
 				click="openCodeEditor();"/>
 		</mx:HBox>
 	</mx:VBox>
