git-svn-id: http://svn.vdombox.ru/flextools/trunk@1791 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -10,9 +10,10 @@
 	creationComplete="{creationComplete();}"
 	showCloseButton="true"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
-	borderAlpha="1" 
+	borderAlpha="0.9" cornerRadius="1" 
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
->
+	visible="false">
+	
 	<mx:Script>
 		<![CDATA[
 			import mx.events.CloseEvent;
