git-svn-id: http://svn.vdombox.ru/flextools/trunk@1808 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/externalEditorButton/ApplicationWindow.mxml
+++ b/IDE/Vdom/vdom/controls/externalEditorButton/ApplicationWindow.mxml
@@ -7,7 +7,7 @@
 
 	<mx:ControlBar paddingTop="1" paddingBottom="3" paddingRight="10" paddingLeft="10">
 		<mx:Spacer width="100%"/>
-		<mx:Button label="Done" click="{doneClickHandler();}"/>
+		<mx:Button label="Close" click="{doneClickHandler();}"/>
 	</mx:ControlBar>
 	
 	<mx:Script>
