some changes in ResourceBrowser connected with getting image resolution at init time
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1822 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-	ListItem component for Resource Browser
+	ListItem component for Resource Browser, VDOM2 Box component
 	Developed by Vadim A. Usoltsev, Tomsk, Russia, 2008
 -->
 <mx:HBox
