git-svn-id: http://svn.vdombox.ru/flextools/trunk@1823 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/PreviewContainer.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/PreviewContainer.mxml
@@ -53,7 +53,7 @@
 				this.height = __image.height + 22;
 				this.width = __image.width + 22;
 				
-				var completeEvent:FlexEvent = new FlexEvent(FlexEvent.UPDATE_COMPLETE);
+				var completeEvent:Event = new Event(Event.COMPLETE);
 				this.dispatchEvent(completeEvent);			
 			}
 			
