--- a/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -90,16 +90,14 @@
 			</mx:VBox>				
 
 		</mx:HBox>
-	
-		<mx:HBox width="100%" horizontalAlign="right" verticalAlign="middle" height="24">
-			<mx:Label text="Total Resources:" />
-			<mx:Label text="{_totalResources}" fontWeight="bold" />
-			<mx:VRule height="18" />
-			<mx:Label text="Filtered:" />
-			<mx:Label text="{_filteredResources}" fontWeight="bold" />
-
-			<mx:Spacer width="100%" />
-			<mx:Button label="Done" click="{doneHandler();}" />
-		</mx:HBox>
 	</mx:VBox>
+	<mx:ControlBar height="35" paddingTop="2" paddingBottom="2" paddingLeft="10" paddingRight="10">
+		<mx:Label text="Total Resources:" />
+		<mx:Label text="{_totalResources}" fontWeight="bold" />
+		<mx:VRule height="18" />
+		<mx:Label text="Filtered:" />
+		<mx:Label text="{_filteredResources}" fontWeight="bold" />
+		<mx:Spacer width="100%" />
+		<mx:Button label="Done" click="{doneHandler();}" />
+	</mx:ControlBar>
 </mx:TitleWindow>
