--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -337,34 +337,34 @@
 	
 	
 	<mx:HDividedBox width="100%" height="100%">
-		<mx:VDividedBox width="200" height="100%">
-			<mx:VBox  width="100%" height="100%" >
-				<mx:Label text="Current container: selected container" fontWeight="bold"  color="0xFFFFFF"/>
-            	 <eventEditor:TreeContainer iconFunction="getIcon" id="trContainer" width="100%" height="100%" 
-    			 	change="treeContainerChangeHandler(event)" />
-    		</mx:VBox>
+		
+		<mx:VDividedBox width="250" height="100%">
+        	 <eventEditor:TreeContainer iconFunction="getIcon" id="trContainer" width="100%" height="40%" 
+			 	change="treeContainerChangeHandler(event)" />
 			 <mx:Canvas label="canvas1" width="100%" height="100%" >
+			    <mx:VBox  width="100%" height="100%" >
+			       <mx:Label text="Current container: selected container" fontWeight="bold"  color="0xFFFFFF"/>
 	                <mx:TabNavigator id="tn"  width="100%" height="100%">
-			            <!-- Define each panel using a VBox container. -->
 				        <mx:Canvas label="Events"  width="100%" height="100%" >
 				             <eventEditor:TreeEvents id="trEvents" width="100%" height="100%" />
 				        </mx:Canvas>
-				        
 				        <mx:Canvas label="Actions"  width="100%" height="100%" >
 				             <eventEditor:TreeActions id="trActions" width="100%" height="100%"	 />
 				        </mx:Canvas>
 			        </mx:TabNavigator>
+			        <mx:Button label="Send to server" right="33" bottom="10" click="creatDataToServer()"/>
+			      </mx:VBox>
 	          </mx:Canvas>
 		</mx:VDividedBox>
-            <mx:VBox id="vBox" width="100%" height="100%" >
-           <!--     <mx:Label text="Current container: selected container" fontWeight="bold"  color="0xFFFFFF"/> -->
-                <mx:Canvas id="can" width="100%" height="100%" 
-                		backgroundColor="#cccccc"
-                	 	dragEnter="dragEnterHandler(event);" 
-        				dragDrop="dragDropHandler(event);">
-                    <mx:Button label="Button" right="33" bottom="10" click="creatDataToServer()"/>
-                </mx:Canvas>
-            </mx:VBox>
+		
+        <mx:VBox id="vBox" width="100%" height="100%" >
+            <mx:Canvas id="can" width="100%" height="100%" 
+            		backgroundColor="#cccccc"
+            	 	dragEnter="dragEnterHandler(event);" 
+    				dragDrop="dragDropHandler(event);">
+                
+            </mx:Canvas>
+        </mx:VBox>
 	</mx:HDividedBox>
 		
 
