fixed same error in eventEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1845 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -12,7 +12,7 @@
 	 	 *  - удаление линий
 	 	 *  - баг с повторяющимися параметрами
 	 	 *  - перенести вниз дерево евентов/акшинов 
-	 	 * 
+	 	 *  - удаленные евенты должны появляться на старом месте
 	 	 * 
 	 	 * */
 	 	 
@@ -116,8 +116,11 @@
 	        	  	newElement = new EventEditorEvents(item);
 	        	  	newElement.addEventListener(TreeEditorEvent.START_DRAW_LINE, startDrawLine);
 	        	  	eventsArray[newElement.ID] = newElement;
+	        	  	
+	        	//  	trEvents.removeDataEffectItem(item);
+	
 	        	  }
-	        	 
+	        	
 	        	newElement.x = event.localX;
 	        	newElement.y = event.localY;
 	        	newElement.addEventListener(TreeEditorEvent.START_REDRAW_LINES, startReDrawLineHandler)
